feat(mcp): split stdio catalog by OS with dynamic tag suggestions
Signed-off-by: Jemin Huh <hjm1980@gmail.com>